<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="4dp"
    android:layout_marginVertical="8dp"
    android:elevation="8dp"
    app:cardBackgroundColor="#F6FCFF"
    app:cardCornerRadius="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/report_icon"
                android:layout_width="45dp"
                android:layout_height="50dp"
                android:contentDescription="@string/report_icon"
                android:src="@drawable/ic_report"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/report_icon"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/test_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:text="@string/test_id"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/test_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_date"
                    android:textColor="@color/light_black"
                    android:textSize="13sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/report_ready_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/report_icon"
                android:src="@drawable/ic_cross"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="25dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/bg_circular"
                android:contentDescription="@string/circular_background"
                android:padding="14dp"
                android:src="@drawable/ic_doctor" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="fill_horizontal"
                android:layout_marginStart="12dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/provider_name"
                    android:textColor="@color/light_black"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/provider_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/provider_name_value"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="25dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/bg_circular"
                android:contentDescription="@string/circular_background"
                android:padding="14dp"
                android:src="@drawable/ic_body_region" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="fill_horizontal"
                android:layout_marginStart="12dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/body_region"
                    android:textColor="@color/light_black"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/body_region"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/body_region_value"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="25dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/bg_circular"
                android:contentDescription="@string/circular_background"
                android:padding="14dp"
                android:src="@drawable/ic_registration" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="fill_horizontal"
                android:layout_marginStart="12dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registration_type"
                    android:textColor="@color/light_black"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/registration_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registration_type_value"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="25dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/bg_circular"
                android:contentDescription="@string/circular_background"
                android:padding="14dp"
                android:src="@drawable/ic_exercise" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="fill_horizontal"
                android:layout_marginStart="12dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_assigned_home_exercise"
                    android:textColor="@color/light_black"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/exercise_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_exercise_count"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/go_to_exercise_list"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="12sp"
            android:layout_marginTop="6dp"
            android:paddingVertical="10dp"
            android:text="@string/view_assigned_exercises" />

    </LinearLayout>

</androidx.cardview.widget.CardView>