<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/phase_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/_1"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/phase_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_report"
        android:contentDescription="@string/phase_image"
        android:background="@android:color/transparent"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/phase_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:text="@string/phase_description"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>