<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ExerciseActivity">

    <TextView
        android:id="@+id/exercise_name"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/blue"
        android:padding="4dp"
        android:text="@string/exercise_name"
        android:gravity="center"
        android:textColor="@color/secondary_color"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeMaxTextSize="35sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <SurfaceView
            android:id="@+id/surfaceView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/display_holder"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:padding="4dp"
            android:background="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <LinearLayout
                android:id="@+id/count_display"
                android:layout_width="110sp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/wrong_display"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/right_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/right_count_text"
                    android:textColor="#3F5BC6"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rep_set"
                    android:textColor="#3F5BC6"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/wrong_display"
                android:layout_width="70sp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="4dp"
                app:layout_constraintStart_toEndOf="@id/count_display"
                app:layout_constraintEnd_toStartOf="@id/camera_switch_display"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/wrong_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wrong_text"
                    android:textColor="@color/red"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wrong"
                    android:textColor="@color/red"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/camera_switch_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/wrong_display"
                app:layout_constraintEnd_toStartOf="@id/hold_time_display"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:id="@+id/camera_switch_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/camera_switching_button"
                    android:src="@drawable/ic_flip_camera"
                    app:layout_constraintBottom_toTopOf="@id/display_holder"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/hold_time_display"
                android:layout_width="70sp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="4dp"
                app:layout_constraintStart_toEndOf="@id/camera_switch_display"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/distance_display">

                <TextView
                    android:id="@+id/max_hold_time_display"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max_time_hold"
                    android:textColor="@color/green"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/second"
                    android:textColor="@color/green"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/distance_display"
                android:layout_width="90sp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/hold_time_display"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distance_text"
                    android:textAlignment="center"
                    android:textColor="@color/teal_200"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/feet"
                    android:textColor="@color/teal_200"
                    android:textSize="16sp" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/exercise_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="8dp"
            android:progressTint="@color/nion_green"
            app:layout_constraintTop_toBottomOf="@id/display_holder"
            tools:layout_editor_absoluteX="98dp" />

        <TextView
            android:id="@+id/time_count_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_count_text"
            android:textColor="@color/green_60"
            android:textSize="150sp"
            android:layout_marginEnd="15dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_done" />

        <TextView
            android:id="@+id/phase_dialogue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phase_dialogue"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/bg_instruction"
            android:padding="2dp"
            app:layout_constraintTop_toBottomOf="@id/exercise_progress"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/btn_gif_display"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_guideline"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/exercise_progress" />

        <Button
            android:id="@+id/btn_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_m_done"
            android:background="@color/blue"
            android:layout_margin="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/bottom_sheet_layout" />

</LinearLayout>
